Bug 279275 - KMyMoney hangs when automatically entering schedules under certain circumstances
Summary: KMyMoney hangs when automatically entering schedules under certain circumstances
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-03 10:46 UTC by Thomas Baumgart
Modified: 2011-08-03 10:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2011-08-03 10:46:42 UTC
Version:           SVN trunk (using KDE 4.6.0) 
OS:                Linux

If the last payment is reached during auto entry after file open, the application may hang.

Reproducible: Always

Steps to Reproduce:
Create a monthly schedule with a due date on the 15th and an end date on the 30th of the same (current) month. Make sure the schedule will be entered by setting the days in advance option to a value high enough.

Actual Results:  
KMyMoney locks up.

Expected Results:  
KMyMoney enters the transaction and continues to work.
Comment 1 Thomas Baumgart 2011-08-03 10:52:12 UTC
SVN commit 1244548 by tbaumgart:

Make sure to mark a schedule as finished to avoid entering an endless loop

BUG: 279275

 M  +8 -1      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1244548