Make sure to mark a schedule as finished to avoid entering an endless loop

BUG: 279275

svn path=/trunk/extragear/office/kmymoney/; revision=1244548